# wc26-tipping

./: 01_points_scraped.csv  01_scrape.ipynb  01_scraped.csv  02_player_lookup.csv  02_process.ipynb  02_tips_matrix.csv  03_analyse.ipynb  03_pca_analysis.csv  03_stats.csv  03_tip_bravery.csv  03_tip_stats.csv  04_points.csv  04_scrape_points.ipynb  05_visualise.ipynb  Untitled.ipynb  pyproject.toml
.github/workflows/: deploy-pages.yml
ko-solver/: 00_bracket.csv  00_eloratings_teams.csv  00_lookup.csv  01_ratings.csv  01_scrape_elo.ipynb  02_find_bracket.ipynb  02_parse_tips.ipynb  02_tips.csv  03_find_bracket.ipynb  03_generate.sh  03_results.json  03_results_schema.json  04_results_schema.json
next-app/: .prettierignore  next.config.ts  package.json  pnpm-lock.yaml
next-app/src/app/: layout.tsx  not-found.tsx  page.tsx
next-app/src/app/[...spec]/: Bracket.tsx  CollapsibleBox.tsx  FlagSpan.tsx  ResultsTable.tsx  SpecDropdowns.tsx  UpsetsRequired.tsx  page.tsx
next-app/src/data/: results.json  results.ts  results.types.d.ts
next-app/src/lib/: bracket.ts  flags.ts  slug.ts  specTree.ts
