[project]
name = "wc26-tipping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.8",
    "pandas>=3.0.3",
    "selenium>=4.45.0",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
